<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StatsActivity">
    <TextView
        android:text="@string/lowest_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28dp"
        android:ems="10"
        android:id="@+id/lowest_roll_text" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="174dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="99dp" android:layout_marginRight="99dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:text="0"
        android:textSize="70dp"
        android:id="@+id/stat_lowest" app:layout_constraintTop_toBottomOf="@+id/lowest_roll_text"
        android:layout_marginTop="80dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="99dp" android:layout_marginRight="99dp"/>
    <LinearLayout
        android:id="@+id/stat_button_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stat_lowest"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <Button
            android:id="@+id/highest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/highest"
            />

        <Button
            android:text="@string/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/average_button"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            />
        <Button
            android:text="@string/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prob_button"
            android:layout_marginTop="50dp" android:layout_marginLeft="20dp"
            android:layout_marginBottom="50dp"
            />
    </LinearLayout>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button" android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>