<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:gravity="center"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/current_roll"/>
    <TextView
        android:id="@+id/current_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Roll Value"
        android:textSize="35dp"

        app:layout_constraintTop_toBottomOf="@+id/greeting"
        app:layout_constraintBottom_toTopOf="@+id/see_results_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        />
    <Button
        android:id="@+id/see_results_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_results"
        app:layout_constraintTop_toBottomOf="@+id/current_roll"
        app:layout_constraintBottom_toTopOf="@id/reroll_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

    <Button
        android:id="@+id/reroll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        app:layout_constraintTop_toBottomOf="@+id/see_results_button"
        app:layout_constraintBottom_toTopOf="@id/home_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintTop_toBottomOf="@+id/reroll_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>